--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/kmk003.a.style.css
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/003/a/kmk003.a.style.css
@@ -81,6 +81,13 @@
 	margin-top: 20px;
 }
 
+.tab-inline-rows {
+	padding: 5px 0px;
+	width: 100%;
+	display: flex;
+    align-items: center;
+}
+
 .tab-inline-item {
 	padding: 0px 10px 0px 10px;
 	display: inline-block;
