--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/o/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksu/001/o/index.xhtml
@@ -25,9 +25,16 @@
 	<div id="set-work-time">
 		<div data-bind="ntsFormLabel: {}">#{i18n.getText('KSU001_65')}</div>
 		<input tabindex="31" id="time-edit1"
-			data-bind="ntsTimeEditor: {value: time1, inputFormat: 'time'}" /> <span>#{i18n.getText('KSU001_66')}</span> <input
+			data-bind="ntsTimeEditor: {
+							name: '#{i18n.getText('KSU001_73')}',
+							value: time1,
+			 				inputFormat: 'time'}" /> 
+			<span>#{i18n.getText('KSU001_66')}</span> <input
 			tabindex="32" id="time-edit2"
-			data-bind="ntsTimeEditor: {value: time2, inputFormat: 'time'}" />
+			data-bind="ntsTimeEditor: {
+							name: '#{i18n.getText('KSU001_74')}',
+							value: time2,
+			 				inputFormat: 'time'}" /> 
 		<button tabindex="33" data-bind="click:search" class="reserved">#{i18n.getText('KSU001_67')}</button>
 		<button tabindex="34" data-bind="click:clear">#{i18n.getText('KSU001_68')}</button>
 		<div tabindex="35" id="combo-box2"
