--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/a/index.xhtml
@@ -80,7 +80,7 @@
 			<div id="tabpanel-a" role="tabpanel" class="screen-a"
 				data-bind="with: viewmodelA">
 				<!-- data-bind="with: viewmodelA" -->
-				<div class="contents-area">
+				<div class="contents-area fixed-flex-layout">
 					<div id="tab-panel"
 						data-bind="ntsTabPanel: { dataSource: tabs, active: selectedTab ,direction :'vertical '}">
 						<div class="tab-content-1">
