coding UI KMK011

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/011/common/divergence_time_settting.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kmk/011/common/divergence_time_settting.xhtml
@@ -7,8 +7,15 @@
 
 <body>
 	<ui:composition >
-		<div>
-			
+		<div class="divergence_time_settting">
+			<table>
+				<thead>
+				
+				</thead>
+				<tbody>
+					
+				</tbody>
+			</table>
 		</div>
 	</ui:composition>
 </body>
