--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/a/index.xhtml
@@ -56,7 +56,7 @@
 				</com:ko-if>
 				
 				<com:ko-if bind="currentTab()=='B'">
-					<button class="proceed" data-bind="click: $parent.viewmodelB.registration.bind($parent.viewmodelB)">#{i18n.getText('KSM011_6')}</button>
+					<button tabindex="2" class="proceed" data-bind="click: $parent.viewmodelB.registration.bind($parent.viewmodelB)">#{i18n.getText('KSM011_6')}</button>
 				</com:ko-if>
 				
 				<com:ko-if bind="currentTab()=='C'">
