--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/b/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/ksm/011/b/index.xhtml
@@ -1,7 +1,7 @@
 <div class="contents-area-b cf">
 	<div class="block-1">
 		<label class="basic-label">#{i18n.getText('KSM011_53')}</label>
-		<hr />
+		<hr class="nav" />
 		<table class="basic-items">
 			<tr>
 				<td><div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('KSM011_54')}</div></td>
@@ -18,10 +18,10 @@
 					</div>
 					
 					<div class="func-btn">
-						<button tabindex="1" class="large" data-bind="click: addAll, enable: addAllEnable"><i class="img-icon icon-next-all"></i></button>
-						<button tabindex="2" class="large" data-bind="click: singleAdd, enable: singleAddEnable"><i class="img-icon icon-next"></i></button>
-						<button tabindex="3" class="large" data-bind="click: singleRemove, enable: singleRemoveEnable"><i class="img-icon icon-prev"></i></button>
-						<button tabindex="4" class="large" data-bind="click: removeAll, enable: removeAllEnable"><i class="img-icon icon-prev-all"></i></button>
+						<button tabindex="3" class="large" data-bind="click: addAll, enable: addAllEnable"><i class="img-icon icon-next-all"></i></button>
+						<button tabindex="4" class="large" data-bind="click: singleAdd, enable: singleAddEnable"><i class="img-icon icon-next"></i></button>
+						<button tabindex="5" class="large" data-bind="click: singleRemove, enable: singleRemoveEnable"><i class="img-icon icon-prev"></i></button>
+						<button tabindex="6" class="large" data-bind="click: removeAll, enable: removeAllEnable"><i class="img-icon icon-prev-all"></i></button>
 					</div>
 					
 					<div class="right-tbl">
@@ -38,13 +38,13 @@
 			</tr>
 			<tr>
 				<td><div data-bind="ntsFormLabel: { constraint: 'PersonSymbolQualify', required: true }">#{i18n.getText('KSM011_60')}</div></td>
-				<td><input tabindex="5" id="qualMark" class="txtQualificationMark" data-bind="ntsTextEditor: { value: qualificationMark, constraint: 'PersonSymbolQualify', 
+				<td><input tabindex="7" id="qualMark" class="txtQualificationMark" data-bind="ntsTextEditor: { value: qualificationMark, constraint: 'PersonSymbolQualify', 
 									required: qualificationMarkRequired, name: '#[KSM011_60]', enable: qualificationMarkEnable }" /></td>
 			</tr>
 			<tr>
 				<td><div data-bind="ntsFormLabel: { required: false }">#{i18n.getText('KSM011_61')}</div></td>
 				<td>
-					<button tabindex="6" data-bind="click: openDialog, enable: openDialogEnable">#{i18n.getText('KSM011_45')}</button>
+					<button tabindex="8" data-bind="click: openDialog, enable: openDialogEnable">#{i18n.getText('KSM011_45')}</button>
 					<input tabindex="-1" class="txtCredentialList" data-bind="ntsTextEditor: { value: credentialList, enable: credentialListEnable }" />
 				</td>
 			</tr>
@@ -53,12 +53,12 @@
 	
 	<div class="block-2">
 		<label class="basic-label">#{i18n.getText('KSM011_62')}</label>
-		<button tabindex="7" data-bind="ntsHelpButton: { image: '../images/KSM011_1.png', position: 'right top', enable: true }">?</button>
-		<hr />
+		<button tabindex="9" data-bind="ntsHelpButton: { image: '../images/KSM011_1.png', position: 'right top', enable: true }">?</button>
+		<hr class="nav" />
 		<table class="symbol-control">
 			<tr>
 				<td><div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('KSM011_63')}</div></td>
-				<td><div tabindex="8" class="cf" data-bind="ntsSwitchButton: {
+				<td><div tabindex="10" class="cf" data-bind="ntsSwitchButton: {
 							options: halfDayCls,
 							optionsValue: 'code',
 							optionsText: 'name',
@@ -68,7 +68,7 @@
 			</tr>
 			<tr>
 				<td><div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('KSM011_64')}</div></td>
-				<td><div tabindex="9" class="cf" data-bind="ntsSwitchButton: {
+				<td><div tabindex="11" class="cf" data-bind="ntsSwitchButton: {
 							options: empSignCls,
 							optionsValue: 'code',
 							optionsText: 'name',
@@ -81,12 +81,12 @@
 	
 	<div class="block-3">
 		<label class="basic-label">#{i18n.getText('KSM011_65')}</label>
-		<button tabindex="10" data-bind="ntsHelpButton: { image: '../images/KSM011_2.png', position: 'right top', enable: true }">?</button>
-		<hr />
+		<button tabindex="12" data-bind="ntsHelpButton: { image: '../images/KSM011_2.png', position: 'right top', enable: true }">?</button>
+		<hr class="nav" />
 		<table class="basic-items">
 			<tr>
 				<td><div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('KSM011_66')}</div></td>
-				<td><div tabindex="11" class="cf" data-bind="ntsSwitchButton: {
+				<td><div tabindex="13" class="cf" data-bind="ntsSwitchButton: {
 							options: obtainCls,
 							optionsValue: 'code',
 							optionsText: 'name',
@@ -96,7 +96,7 @@
 			</tr>
 			<tr>
 				<td><div data-bind="ntsFormLabel: { required: true }">#{i18n.getText('KSM011_67')}</div></td>
-				<td><div tabindex="12" class="cf" data-bind="ntsSwitchButton: {
+				<td><div tabindex="14" class="cf" data-bind="ntsSwitchButton: {
 							options: insufficientCls,
 							optionsValue: 'code',
 							optionsText: 'name',
