--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/g/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/g/index.xhtml
@@ -200,7 +200,7 @@
 			</div>
 			<div id="functions-area-bottom">
 				<button tabindex="11" id="btn_G6_1" class="x-large proceed "
-					data-bind="click: saveNumericSetting">#{i18n.getText('CMF001_257')}</button>
+					data-bind="click: saveNumericSetting, enable: inputMode">#{i18n.getText('CMF001_257')}</button>
 				<button tabindex="12" id="btn_G6_2" class="large"
 					data-bind="click: cancelNumericSetting">#{i18n.getText('CMF001_258')}</button>
 			</div>
