--- a/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/h/index.xhtml
+++ b/nts.uk/uk.com/com.web/nts.uk.com.web/src/main/webapp/view/cmf/001/h/index.xhtml
@@ -184,7 +184,7 @@
 
 			<div id="functions-area-bottom">
 				<button tabindex="10" id="btn_H6_1" class="x-large proceed "
-					data-bind="click: saveCharacterSetting">#{i18n.getText('CMF001_297')}</button>
+					data-bind="click: saveCharacterSetting, enable: inputMode">#{i18n.getText('CMF001_297')}</button>
 				<button tabindex="11" id="btn_H6_2" class="large"
 					data-bind="click: cancelCharacterSetting">#{i18n.getText('CMF001_298')}</button>
 			</div>
