remove fixed header kaf022

--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/m/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kaf/022/m/index.xhtml
@@ -1,4 +1,4 @@
-<div id="contents-area" class="fixed-flex-layout">
+<div  class="fixed-flex-layout">
  	<div class="fixed-flex-layout-left"> 
 	<div id="wkp-list"></div>
 	</div>
