QMM020 Update Screen A B C D

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/l/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/l/index.xhtml
@@ -43,7 +43,8 @@
                                 optionsValue: 'id',
                                 optionsText: 'name',
                                 value: selectedUsageMaster,
-                                enable: true}"></div>
+                                enable: selectedMasterUse() === 1
+                                }"></div>
             </div>
 
             <div class="control-group" style="margin-left:10px">
