--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/020/d/index.xhtml
@@ -4,13 +4,13 @@
         <div id="A">
             <span>#{i18n.getText('QMM020_5')}</span>
             <button id="A1_1" tabindex="1" class="proceed"
-                    data-bind="click: callconvertToCommand, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
+                    data-bind="click: registerStateCorrelationHisDeparment, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_1')}</button>
 
             <button id="A1_2" tabindex="2"
                     data-bind="enable: $root.errors.isEmpty">#{i18n.getText('QMM020_2')}</button>
 
             <button id="A1_3" tabindex="3"
-                    data-bind="enable: false">#{i18n.getText('QMM020_3')}</button>
+                    data-bind="click: openScreenL, enable: $root.errors.isEmpty">#{i18n.getText('QMM020_3')}</button>
 
             <button id="A1_4" tabindex="4"
                     data-bind=" enable: false">#{i18n.getText('QMM020_4')}</button>
@@ -21,18 +21,18 @@
         <div class="fixed-flex-layout-left" style="margin-left: 25px">
             <div data-bind="ntsPanel:{width: '200px', height: '300px', direction: 'right', showIcon: false, visible: true}">
                 <div>
-                    <button id="D1_3" data-bind="enable: $root.errors.isEmpty">履歴追加</button>
+                    <button id="D1_3" data-bind="click: openScreenJ, enable: $root.errors.isEmpty() &amp;&amp; enableAddHisButton()">履歴追加</button>
 
-                    <button id="D1_4" data-bind="enable: $root.errors.isEmpty" style="float: right">履歴編集</button>
+                    <button id="D1_4" data-bind="click: openScreenK, enable: $root.errors.isEmpty() &amp;&amp; enableEditHisButton()" style="float: right">履歴編集</button>
                 </div>
 
                 <div style="margin-top: 10px">
                     <table  id="D1_5"  data-bind="ntsGridList: {
                                             height: 250,
                                             dataSource: listStateCorrelationHis,
-                                            primaryKey: 'code',
+                                            primaryKey: 'hisId',
                                             columns: [
-                                                        { headerText: '', key: 'code', width: 100, hidden: true },
+                                                        { headerText: '', key: 'hisId', width: 100, hidden: true },
                                                         { headerText: '', key: 'name', width: 150, hidden: true },
                                                         { headerText: '', key: 'display', width: 180},
                                                     ],
@@ -55,7 +55,7 @@
             </div>
 
             <div>
-                <div style="width: 390px" data-bind="ntsSearchBox: {targetKey: 'code', mode:'igTree', comId:'treegrid', items: items, selected: currentSelectedDep, selectedKey: 'code', childField: 'childs', fields: ['name', 'code']}"></div>
+                <div style="width: 390px" data-bind="ntsSearchBox: {targetKey: 'departmentID', mode:'igTree', comId:'treegrid', items: items, selected: currentSelectedDep, selectedKey: 'departmentID', childField: 'childs', fields: ['departmentName', 'departmentID']}"></div>
 
                 <table id="treegrid" data-bind="ntsTreeGridView:{
                     width: 1000,
