--- a/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kwr/002/a/index.xhtml
+++ b/nts.uk/uk.at/at.web/nts.uk.at.web/src/main/webapp/view/kwr/002/a/index.xhtml
@@ -25,7 +25,7 @@
 		<ui:define name="content">
 			<div id="functions-area">
 				<!-- A1_2 -->
-				<button id="exportExcel"  tabindex="1" class="group-button-1"
+				<button tabindex="1" class="proceed group-button-1"
 					data-bind="click: exportExcel, enable: enableSave">#{i18n.getText('KWR002_10')}</button>		
 				<!-- A1_1 -->
 				<button  id="print" tabindex="2"
