qmm019: update ui and fix query

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
@@ -400,7 +400,7 @@
                                 <table class="acc-table" data-bind="with: paymentItemSet()">
                                     <colgroup>
                                         <col width="90px"/>
-                                        <col width="*"/>
+                                        <col width="197px"/>
                                     </colgroup>
                                     <tr>
                                         <th class="ui-widget-header">
@@ -538,7 +538,7 @@
                                             <table id="fixed-table">
                                                 <colgroup>
                                                     <col width="70px"/>
-                                                    <col width="*"/>
+                                                    <col width="185px"/>
                                                 </colgroup>
                                                 <thead>
                                                 <tr>
