--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/share/qmm019.d-g.style.css
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/share/qmm019.d-g.style.css
@@ -116,6 +116,10 @@
     background-color: #CFF1A5;
 }
 
+.table-origin .acc-content .acc-table > tbody > tr.last-row > td:first-child {
+    padding: 0px;
+}
+
 .table-origin .acc-content .acc-table > tbody > tr > th {
     white-space: normal;
 }
@@ -126,6 +130,10 @@
 
 .table-origin .acc-content .acc-table .nts-fixed-table .fixed-table tr{
     height: 23px;
+}
+
+#fixed-table{
+    width: 255px;
 }
 
 .label.range-setting{
