qmm019 d: update ui

--- a/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
+++ b/nts.uk/uk.pr/pr.web/nts.uk.pr.web/src/main/webapp/view/qmm/019/d/index.xhtml
@@ -72,7 +72,7 @@
                         <button id="btn-register" tabindex="3" data-bind="click: register">#{i18n.getText('QMM019_110')}</button>
                     </div>
                 </div>
-                <div class="cell valign-top" data-bind="with: dataScreen()">
+                <div class="cell valign-top" data-bind="with: dataScreen">
                     <div class="table table-col-3">
                         <div class="cell valign-center">
                             <!--D2_1-->
@@ -397,7 +397,7 @@
                         <div class="acc-content">
                             <!--D11_1-->
                             <div class="ui-iggrid">
-                                <table class="acc-table" data-bind="with: paymentItemSet()">
+                                <table class="acc-table" data-bind="with: paymentItemSet">
                                     <colgroup>
                                         <col width="90px"/>
                                         <col width="197px"/>
